# seraphany_archive

./: .gitignore  AUTHENTICATION_GUIDE.md  CODE_REVIEW.md  README.md  TODO.md  project-requirements.md  test.db  test_image_urls.html
backend/: .dockerignore  .env.production  .example_env  .gitignore  ALEMBIC_GUIDE.md  DATABASE_MANAGEMENT.md  DATABASE_SCHEMA.md  DATABASE_SETUP.md  DEPLOYMENT.md  Dockerfile  MIGRATION_SUMMARY.md  RAILWAY_MIGRATIONS.md  STORAGE_MIGRATION.md  TROUBLESHOOTING.md  alembic.ini  build.sh  config.py  create_admin.py  entrypoint.sh  migrate.py  nixpacks.toml  pyproject.toml  railway_migrate.ps1  railway_migrate.sh  requirements.txt  run_production_migrations.py  seed_products.py  setup_database.py  test.db  test_database.py  test_production_db.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  10bc8a133989_add_is_admin_to_users.py  56bd6e73e4a4_remove_orderitem_table.py  931366abc0c3_add_database_indexes_for_performance.py  9969a3432232_add_items_column_to_orders_table.py  c476d7c2b095_restore_orderitems_table_with_.py
backend/app/: __init__.py  auth.py  config.py  database.py  database_config.py  dependencies.py  main.py  models.py  schemas.py  storage.py
backend/app/routers/: __init__.py  auth.py  orders.py  products.py  uploads.py  users.py
backend/prisma/: schema.prisma
backend/tests/: __init__.py  auth_helpers.py  conftest.py  test_orders.py  test_products.py  test_users.py
frontend/: .env.production  .example_env  .prettierignore  CSS_ORGANIZATION.md  Dockerfile  RAILWAY_DEPLOYMENT.md  RAILWAY_URLS.md  entrypoint.sh  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AdminRoute.tsx  Footer.tsx  Header.tsx  ImageGallery.tsx  ImageUpload.tsx  ProductList.tsx  ProtectedRoute.tsx  RelatedProducts.tsx  SearchDropdown.tsx  ShoppingCart.tsx
frontend/src/config/: constants.ts
frontend/src/contexts/: AuthContext.tsx  CartContext.tsx  ToastContext.tsx
frontend/src/hooks/: useImageUrl.ts
frontend/src/pages/: AboutPage.tsx  AdminProductCreatePage.tsx  AdminProductEditPage.tsx  AdminProductsPage.tsx  AppointmentsPage.tsx  CartPage.tsx  CheckoutPage.tsx  HomePage.tsx  LoginPage.tsx  OrderConfirmationPage.tsx  OrderDetailsPage.tsx  OrdersPage.tsx  ProductDetailPage.tsx  ProductsPage.tsx  RegisterPage.tsx  RentalsPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: global.css  layout.css  variables.css
frontend/src/styles/components/: footer.css  header.css  image-gallery.css  image-upload.css  loading.css  product-list.css  search-dropdown.css  toast.css
frontend/src/styles/pages/: admin.css  auth.css  cart.css  checkout.css  (+4 more)
frontend/src/test/: Header.test.tsx  ProductList.test.tsx  ShoppingCart.test.tsx
frontend/src/types/: index.ts
frontend/src/utils/: auth.ts
